--- a/src/prometheus-adapter/Makefile
+++ b/src/prometheus-adapter/Makefile
@@ -25,6 +25,8 @@ $(SERVING_CERTS_SECRET):
 	./gencerts.sh
 
 prometheus-adapter: $(SERVING_CERTS_SECRET) $(SRC_FILES)
+	$(KUBECTL) apply $(KUBECTL_OPT) -f $(SERVING_CERTS_SECRET)
+
 	@SRC_FILES="$(SRC_FILES)"
 	@KUBECTL=$(KUBECTL)
 	@KUBECTL_OPT="$(KUBECTL_OPT)"
